--- a/front/web/css/style1.css
+++ b/front/web/css/style1.css
@@ -16,6 +16,7 @@ body {
 }
 
 header{
+    
     background-color: white;
     color: black;
     width: 100%;
@@ -40,30 +41,122 @@ header{
 }
 
 
-.header {
-    background: url('header.jpg') no-repeat center center/cover;
-    padding: 100px 20px;
-    text-align: center;
-    box-shadow: 0px 8px 8px rgba(255, 255, 255, 0.959); 
-}
-.pet {
-    align-items:center;
-    width: 350px;
-    height: 350px;
-}
-.banner {
-    background-color: rgb(255, 255, 255);
-    color: rgb(0, 0, 0);
-    text-align: center;
-    padding: 20px;
-    width: 100vw;
-    opacity: 0;
-    transform: translateY(-20px);
-    transition: opacity 1.0s ease, transform 1.0s ease;
-    animation: fadeInDown 1.0s forwards;
-    border: 3px solid rgb(0, 0, 0); 
+
+.search-icon {
+    height: 40px;
+    width: 240px;
+    display: flex;
+    background:  rgb(25, 201, 255) ;
+    border-radius: 5px;
 }
 
+.search-icon input{
+    background-color: rgb(219, 250, 250);
+    height: 100%;
+    width: 200px;
+    border: none;
+    outline: none;
+    padding: 0 10px;
+    color: #000000;
+    font-size: 16px;
+    border-radius: 5px 0 0 5px;
+}
+
+.search-icon .icon{
+    height: 100%;
+    width: 200px;
+    line-height: 40px;
+    text-align: center;
+    border: 1px solid black;
+    border-radius: 0 5px 5px 0;
+    cursor: pointer;
+}
+.iconI {
+    width: 60%;
+    margin: -4px;
+    height: auto;
+    align-items:center;
+    justify-items: center;
+
+}
+
+.search-icon .icon:hover{
+    background: rgb(75, 197, 235);
+}
+
+.search-icon .icon span{
+    color: blue;
+    font-size: 18px;
+}
+
+li.btn{
+    font-size: 29px;
+    flex: 1;
+    padding: 0 40px;
+    display: none;
+}
+
+li.btn span{
+    height: 42px;
+    width: 42px;
+    text-align: center;
+    line-height: 42px;
+    border: 1px solid #151515;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+li.btn span.show:before{
+    content:'\f00d';
+}
+/* Carousel */
+
+
+  .carousel {
+    margin: 10px;
+    width: 100%;
+    background-color: black; 
+    height: 500px; 
+    position: relative;
+    overflow: hidden;
+  }
+  
+  .carousel img {
+    height: 80%;
+    object-fit: cover; 
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    left: 50%; /* Mover para o centro horizontalmente */
+    transform: translateX(-50%); /* Centraliza a imagem */
+    transition: opacity 1s ease-in-out;
+    border-radius: 10px;
+    pointer-events: none; 
+  }
+
+  /* Imagem ativa */
+  .carousel img.active {
+    opacity: 1;
+    position: relative;
+    pointer-events: auto; 
+  }
+  /* Botões nas laterais */
+  .prev, .next {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background: rgb(185, 204, 223);
+    color: var(--c1);
+    border: none;
+    padding: 12px 18px;
+    cursor: pointer;
+    border-radius: 50%;
+    font-size: 24px;
+    user-select: none;
+    z-index: 10;
+  }
+  .prev { left: 15px; }
+  .next { right: 15px; }
 
 @keyframes fadeInDown {
 from {
@@ -84,8 +177,9 @@ h2{
     padding: 10px;
 }
 
+
 .mainContainer{
-    width: 100%;
+    width: 70%;
     position: relative;
 }
 
