--- a/front/web/css/style1.css
+++ b/front/web/css/style1.css
@@ -7,6 +7,7 @@
 /* Corpo da pagina*/
 
 body {
+  width: 100%;
     font-family:Georgia, 'Times New Roman', Times, serif;
     margin: 0;
     padding:0;
@@ -21,7 +22,7 @@ body {
 header {
     background: linear-gradient(to right, rgb(180, 227, 241), rgb(75, 197, 235));
     color: black;
-    width: 100%;
+    width: 100vh;
     height: 15vh;
     display: flex;
      position: fixed; /* Fixa o header em relação à janela do navegador */
@@ -66,7 +67,7 @@ header {
     background-color: rgba(231, 227, 227, 0.678);
     color: black;
     width: 100%;
-    height:7vh;
+    height:6vh;
 
     display: flex;
     align-items: center;
@@ -275,17 +276,19 @@ h2{
 
 
     & img{
-        width:98%;
+        width:78%;
         height: 270px;
         border-radius: 45px;
 
     }
   }
+ 
 .mainContainer{
-    width: 70%;
-
+  background-color: #25D366;
+    width: 1470px;
+    top:45px;left: 21px;
     position: relative;
-}
+
 
 #produtos-container{
     width: 100%;
@@ -306,28 +309,45 @@ h2{
     display: flex;
     flex-direction: column;
     align-items: center;
-background: linear-gradient(to right, rgb(180, 227, 241), rgb(75, 197, 235));
+    background: linear-gradient(to right, rgb(180, 227, 241), rgb(75, 197, 235));
     padding: 10px;
     margin: 10px;
     border-radius: 10px;
     gap: 10px;
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
    
 
     & img {
-        max-width: 200px;
+        width: 300px;
+        height: 250px;
     }
     & button{
-        background-color: black;
+        background-color: rgb(0, 0, 0);
         border: none;
-        padding: 5px 10px;
+        padding: 15px 70px;
         border-radius: 5px;
         font-weight: bold;
         cursor: pointer;
         color:white;
     }
-}
 
+    
+    .botao1{
+        background-color:transparent;
+        border: none;
+        padding:1px;
+        border-radius: 5px;
+        font-weight: bold;
+        color:white;
+
+       
+  & img{
+    width: 35px;
+    height: 35px;
+  }
+    }
+}
+}
 .modal{
     width: 100%;
     height: 100%;
