--- a/front/web/css/style1.css
+++ b/front/web/css/style1.css
@@ -139,8 +139,9 @@ header button:hover {
   width: 100%;
   height: 45px;
   display: flex;
-  justify-content: space-around;
   align-items: center;
+  gap: 5%;
+  justify-content: center;
 }
 
 .Containerheader button {
