--- a/front/web/css/style1.css
+++ b/front/web/css/style1.css
@@ -715,6 +715,30 @@ header button:hover {
     position: relative;
     top: 0;left: -2%;
     gap: 3%;
+
+    .vet button{
+      width: 70%;
+      height: 350px;
+      border: none;
+      background-color: rgba(11, 167, 206, 0);
+      display: flex;
+      justify-content: space-around;
+      border-radius: 25px;
+
+       & img{
+        width: 70%;
+        border-radius: 70% 0 0 0 ; 
+        position: relative;
+        top: 0;left: 10%; 
+      }
+      & h2{
+        font-size: 15px;
+        color: rgb(233, 224, 142);
+        position: relative;
+        top: 25%;left: -7%;
+      }
+
+    }
 }
 
 @media (max-width: 768px) {
